--- a/a4/index.html
+++ b/a4/index.html
@@ -21,12 +21,6 @@
         <label for="phone">Phone:</label>
         <input type="tel" id="phone" name="phone"><br>
 
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br>
-
         <label for="address">Address:</label>
         <input type="text" id="address" name="address"><br>
 
@@ -36,16 +30,14 @@
         <label for="state">State:</label>
         <select id="state" name="state">
             <option value="">Select State</option>
-            <label for="state">State:</label>
-<select id="state" name="state">
-    <option value="">Select State</option>
+            <!-- Options for states will be dynamically added using JavaScript -->
         </select><br>
 
         <label for="country">Country:</label>
         <select id="country" name="country">
             <option value="">Select Country</option>
             <option value="USA">United States</option>
-    
+            <!-- Add more countries as needed -->
         </select><br>
 
         <label for="zipCode">Zip Code:</label>
