--- a/a4/index.html
+++ b/a4/index.html
@@ -21,6 +21,12 @@
         <label for="phone">Phone:</label>
         <input type="tel" id="phone" name="phone"><br>
 
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username"><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"><br>
+
         <label for="address">Address:</label>
         <input type="text" id="address" name="address"><br>
 
