--- a/a4/index.html
+++ b/a4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="errorMessages"></div>
-    <form action="thankyou.html" onsubmit="return validateForm()">
+    <form id="myForm" onsubmit="return validateForm()">
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" name="firstName"><br>
 
