--- a/a4/index.html
+++ b/a4/index.html
@@ -10,44 +10,53 @@
     <div id="errorMessages"></div>
     <form id="myForm" onsubmit="return validateForm()">
         <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName"><br>
+        <input type="text" id="firstName" name="firstName">
+        <span id="firstNameError" class="error"></span><br>
 
         <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName"><br>
+        <input type="text" id="lastName" name="lastName">
+        <span id="lastNameError" class="error"></span><br>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br>
+        <input type="email" id="email" name="email">
+        <span id="emailError" class="error"></span><br>
 
         <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone"><br>
+        <input type="tel" id="phone" name="phone">
+        <span id="phoneError" class="error"></span><br>
 
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br>
+        <input type="text" id="username" name="username">
+        <span id="usernameError" class="error"></span><br>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br>
+        <input type="password" id="password" name="password">
+        <span id="passwordError" class="error"></span><br>
 
         <label for="address">Address:</label>
-        <input type="text" id="address" name="address"><br>
+        <input type="text" id="address" name="address">
+        <span id="addressError" class="error"></span><br>
 
         <label for="city">City:</label>
-        <input type="text" id="city" name="city"><br>
+        <input type="text" id="city" name="city">
+        <span id="cityError" class="error"></span><br>
 
         <label for="state">State:</label>
         <select id="state" name="state">
             <option value="">Select State</option>
-            <!-- Options for states will be dynamically added using JavaScript -->
-        </select><br>
+        </select>
+        <span id="stateError" class="error"></span><br>
 
         <label for="country">Country:</label>
         <select id="country" name="country">
             <option value="">Select Country</option>
             <option value="USA">United States</option>
-            <!-- Add more countries as needed -->
+          
         </select><br>
 
         <label for="zipCode">Zip Code:</label>
-        <input type="text" id="zipCode" name="zipCode"><br>
+        <input type="text" id="zipCode" name="zipCode">
+        <span id="zipCodeError" class="error"></span><br>
 
         <input type="submit" value="Submit">
     </form>
