--- a/M04/index.html
+++ b/M04/index.html
@@ -17,7 +17,7 @@
 					<li><a href="">Products</a></li>
 					<li><a href="">Services</a></li>
 					<li><a href="">About</a></li>
-					<li><a href="">Contact</a></li>
+					<li><a href="https://aidengandhi.github.io/Intro-to-WebD/contactus/index.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
