--- a/contactus/index.html
+++ b/contactus/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="Simple Template #1 from simpletemplates.org" />
 <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
 <title>Contact Us - Simple Template #1</title>
-<script src="script.js" defer></script>
+<script src="js/script.js" defer></script>
 </head>
 <body>
 <div id="wrap">
