--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Simple Template #1 from simpletemplates.org" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Simple Template #1 - simpletemplates.org</title>
 </head>
 <body>
@@ -30,25 +30,8 @@
 </div>
 
 <div id="content">
-<h2>Contact Us</h2>
-<form id="contactForm" onsubmit="submitForm(event)">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br>
-
-    <label for="subject">Subject:</label>
-    <input type="text" id="subject" name="subject" required><br>
-
-    <label for="message">Message:</label><br>
-    <textarea id="message" name="message" rows="4" cols="50" required></textarea><br>
-
-    <input type="submit" value="Submit">
-</form>
-<div id="thankYou" style="display: none;">
-    Thank you for your message!
-</div>
+    <h2>Welcome to Simple Template #1</h2>
+    <p>This is a fast loading and search engine friendly template. No images are used for a design - pure HTML/CSS template. Code is easy to read for quick and easy editing to suit your needs for a simple website that your visitors will find friendly to use.</p>
 </div>
 
 <div id="menu">
@@ -103,12 +86,13 @@ Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 </div>
 
 
-<div class="clear"></div>
+<div class="clear"> </div>
 
 </div>
 
 </div>
- <script>
+
+<script>
     function loadContent(page) {
         // Implement code to load content dynamically here
     }
