--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,129 +1,113 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
+  <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Simple Template #1 from simpletemplates.org" />
+    <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <title>Simple Template #1 - simpletemplates.org</title>
-</head>
-<body>
-<div id="wrap">
+    <title>Aiden Coding Project</title>
+    <script src="js/style.js" defer></script>
+  </head>
+  <body>
+    <div id="wrap">
+      <div id="header">
+        <h1>Aiden Coding Project</h1>
+        <h2>Coding Project</h2>
+      </div>
 
-<div id="header">
-<h1>Simple Template #1</h1>
-<h2>Free Simple Website HTML/CSS Template</h2>
-</div>
+      <div id="topmenu">
+        <ul id="nav">
+          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
+          <li>
+            <a href="/pages/about.html" onclick="loadContent('about')">About</a>
+          </li>
+          <li>
+            <a href="/pages/coursework.html" onclick="loadContent('coursework')"
+              >Coursework</a
+            >
+          </li>
+          <li>
+            <a href="/pages/artifacts.html" onclick="loadContent('artifacts')"
+              >Artifacts</a
+            >
+          </li>
+          <li>
+            <a href="/pages/module.html" onclick="loadContent('module')"
+              >Module</a
+            >
+          </li>
 
-<div id="topmenu">
-<div class="search">
-<input type="text" style="width:220px" />
-<input type="submit" value="Search" />
-</div>
-<ul id="nav">
-    <li><a href="#" onclick="loadContent('home')">Home</a></li>
-    <li><a href="#" onclick="loadContent('about')">About Us</a></li>
-    <li><a href="#" onclick="loadContent('services')">What We Do</a></li>
-    <li><a href="#" onclick="loadContent('team')">The Team</a></li>
-    <li><a href="#" onclick="loadContent('contact')">Contact Us</a></li>
-</ul>
-</div>
+          <li>
+            <a href="/pages/animation.html" onclick="loadContent('Animation')"
+              >Animation</a
+            >
+          </li>
+          <li>
+            <a href="/pages/creative.html" onclick="loadContent('creative')"
+              >Creative</a
+            >
+          </li>
+          <li>
+            <a href="/pages/contact.html" onclick="loadContent('contact')"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </div>
 
-<div id="content">
-    <h2>Welcome to Simple Template #1</h2>
-    <p>This is a fast loading and search engine friendly template. No images are used for a design - pure HTML/CSS template. Code is easy to read for quick and easy editing to suit your needs for a simple website that your visitors will find friendly to use.</p>
-</div>
+      <div id="content">
+        <h2>Module Assignments</h2>
+        <ul class="module__assignments">
+          <!-- Copy and Past the entire list item for however many assignments you have to put. -->
+          <li>
+            <span>Name of Assignment</span>
+            <br />
+            <a
+              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              target="_blank"
+              >Link to Assignment</a
+            >
+          </li>
+        </ul>
+      </div>
 
-<div id="menu">
+      <div class="clear"></div>
 
-<h3>Example Articles Menu</h3>
-<ul>
-<li><a href="#" onclick="loadContent('article1')">Title of the first article in the sidebar</a></li>
-<li><a href="#" onclick="loadContent('article2')">Another article title goes here</a></li>
-<li><a href="#" onclick="loadContent('article3')">More to write - more to read</a></li>
-<li><a href="#" onclick="loadContent('article4')">Fourth article in the right side menu</a></li>
-<li><a href="#" onclick="loadContent('article5')">High quality content is important</a></li>
-<li><a href="#" onclick="loadContent('article6')">As many articles as you can!</a></li>
-<li><a href="#" onclick="loadContent('article7')">Nullam facilisis nulla a nibh auctor blandit</a></li>
-<li><a href="#" onclick="loadContent('article8')">Suspendisse eget hendrerit nisi.</a></li>
-<li><a href="#" onclick="loadContent('article9')">Vestibulum accumsan dolor eget magna.</a></li>
-<li><a href="#" onclick="loadContent('article10')">Mauris et lacus a velit congue tincidunt.</a></li>
-</ul>
+      <div id="footer">
+        <div class="left">
+          Copyright &copy; Year by <a href="#">Your Website</a>
+          <!-- W3C Markup Validator -->
+          <p>
+            <a href="http://validator.w3.org/check?uri=referer"
+              ><img
+                src="http://www.w3.org/Icons/valid-xhtml10"
+                alt="Valid XHTML 1.0 Strict"
+                height="31"
+                width="88" /></a
+            >&nbsp;
 
-<h3>Friends and Resources</h3>
-<ul>
-<li><a href="http://www.midpulse.com/support/aff.php?aff=017">MidPulse - Reliable Hosting</a></li>
-<li><a href="http://www.simpletemplates.org">Simple Website Templates</a></li>
-</ul>
+            <!-- W3C CSS Validator -->
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+              <img
+                style="border: 0; width: 88px; height: 31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Valid CSS!" />
+            </a>
+          </p>
+        </div>
 
-</div>
-
-<div class="clear"> </div>
-
-<div id="footer">
-
-<div class="left">
-Copyright &copy; Year by <a href="#">Your Website</a>
-<!-- W3C Markup Validator -->
-<p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
-
-height="31" width="88" /></a>&nbsp;
-
-<!-- W3C CSS Validator -->
-<a href="http://jigsaw.w3.org/css-validator/check/referer">
-    <img style="border:0;width:88px;height:31px"
-        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-        alt="Valid CSS!" />
-</a>
-</p>
-
-</div>
-
-<div class="right"> 
-<!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
+        <div class="right">
+          <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
-Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
-</div>
+          Design by
+          <a href="http://www.simpletemplates.org">Simple Website Templates</a>
+        </div>
 
+        <div class="clear"></div>
+      </div>
+    </div>
 
-<div class="clear"> </div>
-
-</div>
-
-</div>
-
-<div id="thankYou" style="display: none;">
-    Thank you for your message!
-</div>
-
-<script>
-function loadContent(page) {
-    console.log("Loading content for page:", page);
-    var content = document.getElementById('content');
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', page + '.html', true);
-    xhr.onreadystatechange = function () {
-        if (xhr.readyState == 4) {
-            if (xhr.status == 200) {
-                console.log("Content loaded successfully:", xhr.responseText);
-                content.innerHTML = xhr.responseText;
-            } else {
-                console.error("Failed to load content. Status code:", xhr.status);
-            }
-        }
-    };
-    xhr.send();
-}
-
-function submitForm(event) {
-    event.preventDefault(); // Prevent the form from submitting normally
-
-    // Implement code to handle form submission here
-    document.getElementById('contactForm').style.display = 'none'; // Hide the form
-    document.getElementById('thankYou').style.display = 'block'; // Show the thank you message
-}
-</script>
-
-
-</body>
+    <div id="thankYou" style="display: none">Thank you for your message!</div>
+  </body>
 </html>
