--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,7 +18,7 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="pages/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
             <a href="pages/about.html" onclick="loadContent('about')">About</a>
           </li>
