--- a/midterm/pages/animation.html
+++ b/midterm/pages/animation.html
@@ -4,9 +4,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Aiden Coding Project</title>
-    <script src="/index.js" defer></script>
+    <script src="js/sytle.js" defer></script>
   </head>
   <body>
     <div id="wrap">
