--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,9 +18,9 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="pages/about.html" onclick="loadContent('about')">About</a>
+            <a href="pages/abou.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
             <a href="pages/coursework.html" onclick="loadContent('coursework')"
