--- a/midterm/pages/about.html
+++ b/midterm/pages/about.html
@@ -17,37 +17,37 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="/pages/about.html" onclick="loadContent('about')">About</a>
+            <a href="pages/about.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
-            <a href="/pages/coursework.html" onclick="loadContent('coursework')"
+            <a href="pages/coursework.html" onclick="loadContent('coursework')"
               >Coursework</a
             >
           </li>
           <li>
-            <a href="/pages/artifacts.html" onclick="loadContent('artifacts')"
+            <a href="pages/artifacts.html" onclick="loadContent('artifacts')"
               >Artifacts</a
             >
           </li>
           <li>
-            <a href="/pages/module.html" onclick="loadContent('module')"
+            <a href="pages/module.html" onclick="loadContent('module')"
               >Module</a
             >
           </li>
           <li>
-            <a href="/pages/animation.html" onclick="loadContent('Animation')"
+            <a href="pages/animation.html" onclick="loadContent('Animation')"
               >Animation</a
             >
           </li>
           <li>
-            <a href="/pages/creative.html" onclick="loadContent('creative')"
+            <a href="pages/creative.html" onclick="loadContent('creative')"
               >Creative</a
             >
           </li>
           <li>
-            <a href="/pages/contact.html" onclick="loadContent('contact')"
+            <a href="pages/contact.html" onclick="loadContent('contact')"
               >Contact</a
             >
           </li>
@@ -70,7 +70,7 @@
             </p>
           </div>
           <figure class="about__img--wrapper">
-            <img src="/assets/Lebron.avif" alt="" class="about__img" />
+            <img src="assets/Lebron.avif" alt="" class="about__img" />
           </figure>
         </div>
       </div>
