--- a/midterm/index.html
+++ b/midterm/index.html
@@ -20,7 +20,7 @@
         <ul id="nav">
           <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="pages/abou.html" onclick="loadContent('about')">About</a>
+            <a href="pages/about.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
             <a href="pages/coursework.html" onclick="loadContent('coursework')"
