--- a/midterm/index.html
+++ b/midterm/index.html
@@ -57,19 +57,12 @@
       </div>
 
       <div id="content">
-        <h2>Module Assignments</h2>
-        <ul class="module__assignments">
-          <!-- Copy and Past the entire list item for however many assignments you have to put. -->
-          <li>
-            <span>Name of Assignment</span>
-            <br />
-            <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
-              target="_blank"
-              >Link to Assignment</a
-            >
-          </li>
-        </ul>
+        <h2>Welcome to My Coding Portfolio!</h2>
+        <p>
+          This my coding portfolio for blah blah that showcases my coursworks,
+          module assignments, artifacts, and allows you to contact me!
+        </p>
+        <p>I created this portfolio (date) because (why)</p>
       </div>
 
       <div class="clear"></div>
