--- a/midterm/pages/coursework.html
+++ b/midterm/pages/coursework.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
@@ -17,38 +18,37 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="/pages/about.html" onclick="loadContent('about')">About</a>
+            <a href="pages/about.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
-            <a href="/pages/coursework.html" onclick="loadContent('coursework')"
+            <a href="pages/coursework.html" onclick="loadContent('coursework')"
               >Coursework</a
             >
           </li>
           <li>
-            <a href="/pages/artifacts.html" onclick="loadContent('artifacts')"
+            <a href="pages/artifacts.html" onclick="loadContent('artifacts')"
               >Artifacts</a
             >
           </li>
           <li>
-            <a href="/pages/module.html" onclick="loadContent('module')"
+            <a href="pages/module.html" onclick="loadContent('module')"
               >Module</a
             >
           </li>
-
           <li>
-            <a href="/pages/animation.html" onclick="loadContent('Animation')"
+            <a href="pages/animation.html" onclick="loadContent('Animation')"
               >Animation</a
             >
           </li>
           <li>
-            <a href="/pages/creative.html" onclick="loadContent('creative')"
+            <a href="pages/creative.html" onclick="loadContent('creative')"
               >Creative</a
             >
           </li>
           <li>
-            <a href="/pages/contact.html" onclick="loadContent('contact')"
+            <a href="pages/contact.html" onclick="loadContent('contact')"
               >Contact</a
             >
           </li>
@@ -56,33 +56,34 @@
       </div>
 
       <div id="content">
-        <h2>Contact Me!</h2>
-        <form
-          class="contact__form"
-          onsubmit="submitForm(event)"
-          action="/pages/thankyou-page.html"
-          method="get"
-          name="myContact">
-          <input
-            class="contact__name"
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Name" />
-          <input
-            class="contact__email"
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Email" />
-          <textarea
-            id="message"
-            name="message"
-            placeholder="Message"
-            cols="30"
-            rows="10"></textarea>
-          <button class="contact__btn">Submit</button>
-        </form>
+        <h2>Coursework</h2>
+        <h4>Courses I have previously taken at Bellevue College</h4>
+        <div class="coursework__content--wrapper">
+          <ul>
+            <h4>(Course Name)</h4>
+            <li>(Course Number)</li>
+            <li>
+              <a
+                href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                target="_blank">
+                (Link to Class Catalog)
+              </a>
+            </li>
+            <li>(Instructor's Name)</li>
+          </ul>
+          <div class="coursework__reflection">
+            <h4>Knowledge Prior To Course</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+              tempora sit, aperiam ullam veritatis veniam?
+            </p>
+            <h4>Knowledge/Skills Gained After Course</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+              tempora sit, aperiam ullam veritatis veniam?
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="clear"></div>
