--- a/midterm/pages/artifacts.html
+++ b/midterm/pages/artifacts.html
@@ -1,12 +1,14 @@
+
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <title>Aiden Coding Project</title>
-    <script src="js/style.js" defer></script>
+    <script src="/index.js" defer></script>
   </head>
   <body>
     <div id="wrap">
@@ -61,14 +63,12 @@
           <ul>
             <li>
               <div class="artifact__content">
-                <h4>Artifact Name</h4>
+                <h4>Artifact #1 create a resume</h4>
                 <p>
-                  Artifact Description: Lorem ipsum dolor sit, amet consectetur
-                  adipisicing elit. Quod totam similique excepturi rem. Sed,
-                  consequatur.
+                  A resume formatted using properties of html.
                 </p>
                 <a
-                  href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                  href="https://aidengandhi.github.io/Intro-to-WebD/artifact01/index.html"
                   target="_blank"
                   >Link to Artifact Solution</a
                 >
@@ -79,14 +79,12 @@
             </li>
             <li>
               <div class="artifact__content">
-                <h4>Artifact Name</h4>
+                <h4>Artifact #2 Create a Chessboard</h4>
                 <p>
-                  Artifact Description: Lorem ipsum dolor sit, amet consectetur
-                  adipisicing elit. Quod totam similique excepturi rem. Sed,
-                  consequatur.
+                  This artifact uses an external css file to format a chessboard with a background and title, including adding fonts from a font library.
                 </p>
                 <a
-                  href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                  href="https://aidengandhi.github.io/Intro-to-WebD/chess/chessboard.html"
                   target="_blank"
                   >Link to Artifact Solution</a
                 >
@@ -97,14 +95,12 @@
             </li>
             <li>
               <div class="artifact__content">
-                <h4>Artifact Name</h4>
+                <h4>Artifact #3 Create a Rhombus</h4>
                 <p>
-                  Artifact Description: Lorem ipsum dolor sit, amet consectetur
-                  adipisicing elit. Quod totam similique excepturi rem. Sed,
-                  consequatur.
+                  This artifact uses javascript to format a rhombus based upon symbols and colors of the user's choice.
                 </p>
                 <a
-                  href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                  href="https://aidengandhi.github.io/Intro-to-WebD/M06/index.html"
                   target="_blank"
                   >Link to Artifact Solution</a
                 >
@@ -115,14 +111,12 @@
             </li>
             <li>
               <div class="artifact__content">
-                <h4>Artifact Name</h4>
+                <h4>Artifact #4 Validate Contact Form</h4>
                 <p>
-                  Artifact Description: Lorem ipsum dolor sit, amet consectetur
-                  adipisicing elit. Quod totam similique excepturi rem. Sed,
-                  consequatur.
+                  This artifact uses javascript to create a feild entry where someone can enter their information as if they were going to message the owner of a website, including error messages when feilds arent properly filled out .
                 </p>
                 <a
-                  href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                  href="https://aidengandhi.github.io/Intro-to-WebD/a4/index.html"
                   target="_blank"
                   >Link to Artifact Solution</a
                 >
@@ -133,14 +127,12 @@
             </li>
             <li>
               <div class="artifact__content">
-                <h4>Artifact Name</h4>
+                <h4>Artifact #5 Create a Slideshow</h4>
                 <p>
-                  Artifact Description: Lorem ipsum dolor sit, amet consectetur
-                  adipisicing elit. Quod totam similique excepturi rem. Sed,
-                  consequatur.
+                  This artifact uses javascript and css to create a slideshow of images with a description that can be scrolled through but also automatically scrolls itself.
                 </p>
                 <a
-                  href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                  href="https://aidengandhi.github.io/Intro-to-WebD/a5/index.html"
                   target="_blank"
                   >Link to Artifact Solution</a
                 >
