--- a/midterm/pages/contact.html
+++ b/midterm/pages/contact.html
@@ -1,12 +1,14 @@
+
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <title>Aiden Coding Project</title>
-    <script src="js/style.js" defer></script>
+    <script src="/index.js" defer></script>
   </head>
   <body>
     <div id="wrap">
@@ -60,7 +62,7 @@
         <form
           class="contact__form"
           onsubmit="submitForm(event)"
-          action="pages/thankyoupage.html"
+          action="/pages/thankyou-page.html"
           method="get"
           name="myContact">
           <input
