--- a/midterm/pages/coursework.html
+++ b/midterm/pages/coursework.html
@@ -1,13 +1,14 @@
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <title>Aiden Coding Project</title>
-    <script src="js/style.js" defer></script>
+    <script src="/index.js" defer></script>
   </head>
   <body>
     <div id="wrap">
@@ -18,37 +19,37 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="pages/about.html" onclick="loadContent('about')">About</a>
+            <a href="/pages/about.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
-            <a href="pages/coursework.html" onclick="loadContent('coursework')"
+            <a href="/pages/coursework.html" onclick="loadContent('coursework')"
               >Coursework</a
             >
           </li>
           <li>
-            <a href="pages/artifacts.html" onclick="loadContent('artifacts')"
+            <a href="/pages/artifacts.html" onclick="loadContent('artifacts')"
               >Artifacts</a
             >
           </li>
           <li>
-            <a href="pages/module.html" onclick="loadContent('module')"
+            <a href="/pages/module.html" onclick="loadContent('module')"
               >Module</a
             >
           </li>
           <li>
-            <a href="pages/animation.html" onclick="loadContent('Animation')"
+            <a href="/pages/animation.html" onclick="loadContent('Animation')"
               >Animation</a
             >
           </li>
           <li>
-            <a href="pages/creative.html" onclick="loadContent('creative')"
+            <a href="/pages/creative.html" onclick="loadContent('creative')"
               >Creative</a
             >
           </li>
           <li>
-            <a href="pages/contact.html" onclick="loadContent('contact')"
+            <a href="/pages/contact.html" onclick="loadContent('contact')"
               >Contact</a
             >
           </li>
@@ -60,27 +61,25 @@
         <h4>Courses I have previously taken at Bellevue College</h4>
         <div class="coursework__content--wrapper">
           <ul>
-            <h4>(Course Name)</h4>
-            <li>(Course Number)</li>
+            <h4>Fundamentals of Web Development</h4>
+            <li>(DEV109)</li>
             <li>
               <a
-                href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+                href="https://www.bellevuecollege.edu/classes/All/PROG/109Links to an external site."
                 target="_blank">
                 (Link to Class Catalog)
               </a>
             </li>
-            <li>(Instructor's Name)</li>
+            <li>(Adam Brehm)</li>
           </ul>
           <div class="coursework__reflection">
             <h4>Knowledge Prior To Course</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-              tempora sit, aperiam ullam veritatis veniam?
+            I didn't have much experience with any kind of coding apart from taking a Kahn Academy course for html when I was in 5th grade.
             </p>
             <h4>Knowledge/Skills Gained After Course</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-              tempora sit, aperiam ullam veritatis veniam?
+              After taking this course I feel pretty confident in my ability to execute pretty simple tasks using HTML, Javascript, and CSS in a Web development setting
             </p>
           </div>
         </div>
